Update favicon to use PNG format and add preconnect link for fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       rel="preconnect"
       href="https://fonts.googleapis.com"
     />
+
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
@@ -13,8 +14,8 @@
     />
     <link
       rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
+      type="image/png"
+      href="/money.png"
     />
     <meta
       name="viewport"
